--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,9 @@
 bq {
-    */ padding: 0%;
-    */ margin-left: auto;
-    */ margin-right: 10px;
-    */ width: 250vw;
-    */ height: 250vh;
+    /* padding: 0%;
+     margin-left: auto;
+     margin-right: 10px;
+     width: 250vw;
+     height: 250vh;
     */
 }
 
