--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,15 +5,27 @@
     width: 250vw;
     height: 250vh; */
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
 }
 
+
 #beerWorld {
-    width: 30%;
+    width: 400px;
+    height: 400px;
     background-repeat: no-repeat;
     background-position-x: 40%, right;
     background-size: 35% 35%;
-    background-image: url("./images/BrewQuest.png");
+    /* background-image: url("./images/BrewQuest.png"); */
+}
+
+.custom-text {
+    font-size: 1.3rem;
+}
+
+.breweryBox {
+    border: solid black 2px;
+    width: fit-content;
+   
 }
 
 main {
@@ -28,9 +40,21 @@ body {
     height: 40%;
     margin: 0;
     padding: 10;
+
+    
     background-color: #ffffe6
 }
+#nextBtn {
+    min-width: 150px;
+}
+#previousBtn {
+    min-width: 150px;
+}
 
+.cycleBtn {
+    justify-content: center;
+    display: flex;
+}
 #map {
     position: relative;
     /* Change this from absolute to relative */
@@ -40,4 +64,44 @@ body {
     /* Center the container horizontally */
     width: 75%;
     /* Or set a fixed width, e.g., 600px */
+}
+
+@media screen and (max-width: 800px) {
+
+    main {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        align-items: center;
+    }
+    #map {
+        /* height: 70vh; */
+        margin-bottom: 50px;
+    }
+    .breweryBox {
+        margin-left: 0px;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        font-size: 1rem;
+        width: 80vw;
+    }
+    .bq {
+        display: flex;
+
+        flex-direction: column;
+        width: 80vw;
+    }
+    .cycleBtn {
+        width: 80vw;
+        
+    }
+    #previousBtn {
+        width: 38vw;
+        margin: auto;
+
+    }
+    #nextBtn {
+        width: 38vw;
+        margin: auto;
+    }
 }
